--- a/src/App.scss
+++ b/src/App.scss
@@ -537,23 +537,87 @@ main {
         color: $Prim;
         margin-bottom: 3vw;
       }
-      p{
-        &:nth-child(1){
+      p {
+        &:nth-child(1) {
           font-size: 4vw;
         }
-        &:nth-child(2){
+        &:nth-child(2) {
           font-size: 5vw;
           font-weight: 600;
           text-transform: uppercase;
-          color: $Prim;  
+          color: $Prim;
           margin-bottom: 2vw;
         }
-        &:nth-child(3){
+        &:nth-child(3) {
           font-size: 4vw;
         }
       }
-      hr{
+      hr {
         margin: 3vw 0;
+      }
+      li {
+        &:nth-child(2) {
+          hr {
+            display: none;
+          }
+        }
+      }
+    }
+    footer {
+      padding: 4vw;
+      background-color: $Sec;
+      h3 {
+        color: white;
+        font-weight: 400;
+        margin-bottom: 2vw;
+      }
+      form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 2vw;
+        .InputWrapper,
+        .InputWrapperError {
+          display: flex;
+          flex-direction: column;
+          gap: 1vw;
+          &.InputWrapperError {
+            input,
+            textarea {
+              border: solid 3px red;
+            }
+          }
+          input,
+          textarea {
+            width: 100%;
+            padding: 2vw;
+            border: solid 1px gray;
+            border-radius: 5px;
+            box-shadow: 0px 0px 6px #04040475;
+
+            &.Correct {
+              border: solid 1px green;
+            }
+            &.NotCorrect {
+              border: solid 1px red;
+            }
+          }
+        }
+        span {
+          color: red;
+          font-size: 3.5vw;
+          font-weight: 600;
+        }
+      }
+      button {
+        background-color: $Prim;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        padding: 2vw;
+        margin-right: 3vw;
+        box-shadow: 0px 0px 6px #04040475;
+        font-weight: 600;
       }
     }
   }
@@ -617,7 +681,7 @@ main {
     }
   }
 }
-footer {
+#Footer {
   padding: 4vw 4vw 8vw;
   background-color: $Third;
   width: 100%;
